2006-07-11  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: From-C-object Constructor: Added documentation explaining 
	how/when to use it and when to do an extra reference(). This will help us, 
	though it should rarely be necessary for an application developer to understand 
	it.
	Made pCppRefcount_ mutable, so that refcount_() can be a const method so that 
	the templated constructor compiles.
	Added class documentation to explain why we even want to use this class.

2006-07-05  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/refptr.h: copy constructors: initialize the pCppRefcount_ member 
	variable, using a public refcount_() method when necessary to access a 
	different RefPtr<> specialization.

2006-07-11  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: Use an int to reference-count the C++ object, and 
	only reference/unreference the object (and hence the underlying C object) 
	when receiving/deleting the C++ object. Without this, we never delete 
	the C++ object. Fixes bug #7442.

2006-07-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: add NEWS for 1.1.10 release
	* configure.in: bump version to 1.1.12

2006-07-05  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: Ooops, I had accidentally removed dependency info for
	release-publish target

2006-07-05  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/context.h:
	* cairomm/fontface.h:
	* cairomm/pattern.h:
	* cairomm/surface.cc:
	* cairomm/surface.h:
	* cairomm/xlib_surface.cc:
	* cairomm/xlib_surface.h: Fix the generic text about reference-counted 
	objects, because we no longer use copy constructors for this. And some 
	pedantic white space changes.

2006-07-05  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h: create(): Make the font_matrix and ctm 
	parameters const (they are now const in the C API too). Maybe the font 
	parameter should be const, but maybe there is a reason that it is not 